Bug 1586387 - Don't append a device change message to a graph that is going away. r=padenot a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D48553